# internal/server/http.go
@@ -12,7 +12,7 @@ import (
 )
 
 // NewHTTPServer new an HTTP server.
-func NewHTTPServer(c *conf.Server, rules *service.RuleGoService, runLogs *service.RunLogService, components *service.ComponentService, md *service.MdWorkflowService, logger log.Logger) *http.Server {
+func NewHTTPServer(c *conf.Server, rules *service.RuleGoService, runLogs *service.RunLogService, components *service.ComponentService, md *service.MdWorkflowService, admin *service.AdminService, logger log.Logger) *http.Server {
 	var opts = []http.ServerOption{
 		http.Middleware(
 			recovery.Recovery(),
@@ -33,6 +33,7 @@ func NewHTTPServer(c *conf.Server, rules *service.RuleGoService, runLogs *servic
 	v1.RegisterRunLogHTTPServer(srv, runLogs)
 	v1.RegisterComponentHTTPServer(srv, components)
 	v1.RegisterMdWorkflowHTTPServer(srv, md)
+	v1.RegisterAdminHTTPServer(srv, admin)
 
 	return srv
 }
